Stop the text from aligning left

--- a/manager_platform/src/components/playerScouting/playerInfoDisplay.module.css
+++ b/manager_platform/src/components/playerScouting/playerInfoDisplay.module.css
@@ -1,5 +1,4 @@
 .playerHeader {
-  text-align: left;
   font-size:larger;
   color:whitesmoke;
 }
